# voice-agent

./: .gitignore  .gitmodules  CHANGELOG.md  NVIDIA_PIPECAT.md  README.md  flake.nix  pyproject.toml  third_party_oss_license.txt
docs/: BEST_PRACTICES.md  JETSON_THOR.md  NVIDIA_PIPECAT.md  SPECULATIVE_SPEECH_PROCESSING.md
examples/: README.md
examples/healthcare_voice_agent/: Dockerfile  README.md  agentic-healthcare-front-desk  config.py  docker-compose.yml  env.example  ipa.json  pipeline-patient.py  websocket_transcript_output.py
examples/healthcare_voice_agent/assets/: .gitattributes
examples/healthcare_voice_agent/configs/: config.yaml
examples/nat_agent/: Dockerfile  README.md  bot.py  bot_websocket.py  docker-compose.yml  env.example  pyproject.toml
examples/nat_agent/agent/: Dockerfile  menu.json  pyproject.toml
examples/nat_agent/agent/configs/: config.yml
examples/nat_agent/agent/src/nvidia_flowershop/: __init__.py  register.py  ui_state_api.py
examples/nat_agent/agent/src/nvidia_flowershop/configs/: config.yml
examples/speech-to-speech/: Dockerfile  README.md  bot.py  docker-compose.yml  env.example  pyproject.toml
examples/voice_agent_webrtc/: Dockerfile  README.md  docker-compose.jetson.yml  docker-compose.yml  env.example  env.jetson.example  index.html  ipa.json  pipeline.py  pyproject.toml
examples/voice_agent_websocket/: Dockerfile  README.md  bot.py  docker-compose.yml  env.example  pyproject.toml
examples/webrtc_ui/: README.md  package-lock.json  package.json
examples/webrtc_ui/src/: App.tsx  Transcripts.tsx  VoiceSelector.tsx  config.ts  main.tsx
examples/webrtc_ui/src/hooks/: use-pipecat-webrtc.ts
python-clients-main asrr/: tts_asr.py  tts_asr_wer.py  wer.gitignore  wer.py
src/nvidia_pipecat/processors/: nvidia_context_aggregator.py  nvidia_rtvi.py
src/nvidia_pipecat/services/: nvidia_llm.py  riva_speech.py
src/nvidia_pipecat/transports/network/: ace_fastapi_websocket.py
tests/perf/: README.md  file_input_client.py  ttfb_analyzer.py
tests/unit/: test_blingfire_text_aggregator.py  test_elevenlabs.py  test_nat_agent.py  test_nvidia_aggregators.py  test_nvidia_llm_service.py  test_proactivity.py  test_riva_asr_service.py  test_riva_tts_service.py  test_speech_planner.py  test_transcription_sync_processors.py  utils.py
