# SPDX-FileCopyrightText: Copyright (c) 2025, NVIDIA CORPORATION & AFFILIATES. All rights reserved.
# SPDX-License-Identifier: Apache-2.0
[project]
name = "nvidia_flowershop_bot"
version = "0.1.0"
description = "NVIDIA Flowershop Bot - WebRTC Voice Interface"
requires-python = ">=3.12"
dependencies = [
    "nvidia-pipecat",
    "aiortc>=1.13.0",
    "opencv-python-headless>=4.11.0.86",
    "torch>=2.7.1",
]
keywords = ["ai", "voice", "bot", "nat", "agent"]
classifiers = ["Programming Language :: Python"]

[tool.uv.sources]
nvidia-pipecat = { path = "../..", editable = true }
torch = { index = "pytorch" }


[[tool.uv.index]]
name = "pytorch"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[dependency-groups]
dev = [
    "ruff>=0.11.13",
]

[build-system]
build-backend = "setuptools.build_meta"
requires = ["setuptools >= 64"] 