[project]
name = "voice-agent-websocket-example"
version = "0.1.0"
description = "NVIDIA Voice Agent example"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
 "nvidia-pipecat",
]

[tool.uv.sources]
torch = { index = "pytorch" }
nvidia-pipecat = { path = "../../.", editable = true }

[[tool.uv.index]]
name = "pytorch"
url = "https://download.pytorch.org/whl/cpu"
explicit = true
