# SPDX-FileCopyrightText: Copyright (c) 2025, NVIDIA CORPORATION & AFFILIATES. All rights reserved.
# SPDX-License-Identifier: Apache-2.0

[build-system]
build-backend = "setuptools.build_meta"
requires = ["setuptools >= 64"]

[project]
name = "nvidia_flowershop_agent"
version = "0.1.0"
dependencies = [
    "nvidia-nat[langchain,telemetry]>=1.2.0,<1.3.0",
    "langgraph>=0.2.76,<0.3.0",
    "langchain>=0.3.27,<0.4.0",
    "langchain-core>=0.3.75,<0.4.0",
    "matplotlib>=3.10.7",
]
requires-python = ">=3.11,<3.13"
description = "NVIDIA Flowershop NeMo Agent toolkit - Agent deployment"
keywords = ["ai", "rag", "agents"]
classifiers = ["Programming Language :: Python"]

[project.entry-points.'nat.components']
nvidia_flowershop = "nvidia_flowershop.register"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
nvidia_flowershop = ["configs/*.yml", "data/*.json"] 
